--- a/weather3/index.html
+++ b/weather3/index.html
@@ -72,21 +72,22 @@
                                                     <div class="box" id="location">Miasto</div>
                                                 </div>
 
-
-                                                <div class="col-lg-6 col-xs-12 center-block">
-                                                    <div class="box">
-                                                        <span class="current-weather-img"><img class="img-responsive" src="img/icons/png/003-cloudy-4.png" alt="weather-icon"></span>
-                                                    </div>
-                                                </div>
-
-                                                <div class="col-lg-6 col-xs-12 temp">
-
-                                                    <div class="col-lg-12 temp">
-                                                        <div class="col-lg-12 temp-current">
-                                                            4 &#186 C
+                                                <div class="main-temp-and-icon">
+                                                    <div class="col-lg-6 col-xs-12 center-block">
+                                                        <div class="box">
+                                                            <span class="current-weather-img"><img class="img-responsive current-icon" src="img/icons/png/003-cloudy-4.png" alt="weather-icon"></span>
                                                         </div>
                                                     </div>
 
+                                                    <div class="col-lg-6 col-xs-6 temp">
+
+                                                        <div class="col-lg-12 temp">
+                                                            <div class="col-lg-12 temp-current">
+                                                                4 &#186 C
+                                                            </div>
+                                                        </div>
+
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
@@ -97,21 +98,21 @@
                                                 <!--Weather description-->
                                                 <div class="col-lg-12 col-xs-12 title">
 
-                                                    <div>Warunki pogodowe<span class="current-description values">Lekki deszcz </span> </div>
+                                                    <div class="descript-row"><span class="descrp-title">Warunki pogodowe</span><span class="current-description values">Lekki deszcz </span> </div>
 
                                                 </div>
 
 
                                                 <div class="col-lg-12 col-xs-12 title">
 
-                                                    <div>Wiatr <span class="current-wind values">10km/h </span></div>
+                                                    <div class="descript-row"><span class="descrp-title">Wiatr </span><span class="current-wind values">10km/h </span></div>
 
                                                 </div>
 
 
                                                 <div class="col-lg-12 col-xs-12 title">
 
-                                                    <div>Ciśnienie <span class="current-pressure values"> 1080hPa </span></div>
+                                                    <div class="descript-row"><span class="descrp-title">Ciśnienie </span><span class="current-pressure values"> 1080hPa </span></div>
 
                                                 </div>
 
@@ -122,7 +123,7 @@
 
                                                 <div class="col-lg-12 col-xs-12 title">
 
-                                                    <div>Zachmurzenie <span class="current-cloudness values">
+                                                    <div class="descript-row"><span class="descrp-title">Zachmurzenie</span><span class="current-cloudness values">
                                    10%
                                    </span></div>
 
@@ -131,7 +132,7 @@
 
                                                 <div class="col-lg-12 col-xs-12 title">
 
-                                                    <div>Wilgotność <span class="current-humidity  values">
+                                                    <div class="descript-row"><span class="descrp-title">Wilgotność </span><span class="current-humidity  values">
                                    10%
                                    </span></div>
 
